# kube-custom-resources-rs

code-generator/: Cargo.toml
kube-custom-resources-rs/src/onepassword_com/v1/: onepassworditems.rs
