# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "code-generator"
version = "1.0.0"
authors = ["Sebastian Hoß <seb@hoß.de>"]
edition = "2021"
publish = false

[dependencies]
reqwest = { version = "0.12.7", features = ["rustls-tls"] }
k8s-openapi = { version = "~0", features = ["latest"] }
serde_yaml = { version = "0.9.34" }
glob = { version = "0.3.1" }
itertools = "0.13.0"
cargo_toml = { version = "0.20.5", features = ["features"] }
toml = {version = "0.8.14"}
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.91"
